# backend/docs/destination-swagger.yaml
@@ -5,7 +5,7 @@ info:
   description: "API for destination app"
   version: "1.0.0"
 servers:
-  - url: "http://localhost:3000/api/v1"
+  - url: http://localhost:3000/api/v1
 paths: 
   /destinations:
     post:
@@ -22,8 +22,8 @@ paths:
               allOf: 
                 - $ref: '#/components/schemas/Destination'
       responses:
-        200:
-          description: "OK"
+        201:
+          description: "Created"
         401:
           description: "Access Denied"
         422:
@@ -64,6 +64,13 @@ paths:
   /destinations/{id}:
     get:
       description: "Get Destination detail"
+      parameters:
+        - in: path
+          required: true
+          name: id
+          schema:
+            type: integer
+          description: Get destination detail by id  
       tags:
         - "Destinations"
       responses:
@@ -75,6 +82,13 @@ paths:
       description: "update destination by id (ONLY ADMIN)"
       tags:
         - "Destinations"
+      parameters:
+      - in: path
+        required: true
+        name: id
+        schema:
+          type: integer
+        description: update destination detail by id  
       security:
         - bearerAuth: []
       requestBody:
@@ -95,6 +109,13 @@ paths:
           description: "Server Error"
     delete:
       description: "Delete destination by id (ONLY ADMIN)"
+      parameters:
+      - in: path
+        required: true
+        name: id
+        schema:
+          type: integer
+        description: Get destination detail by id  
       security:
         - bearerAuth: []
       tags:
@@ -122,7 +143,7 @@ components:
           example: "NTB"
         description:
           type: string
-          example: "lorem ipsum"
+          example: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. "
         images: 
           type: string
           format: binary
@@ -131,7 +152,6 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-      description: "Format of the authorization is 'Bearer JWT_Token'"
 
   
 
